# PodToBUILD

./: BUILD  Makefile  WORKSPACE
BazelExtensions/: acknowledgement_merger.py  headermap_builder.py  headermap_tool.py
Examples/: .gitignore  Example.Makefile  package.json
Examples/React/: BUILD.bazel  Podfile  Pods.WORKSPACE  WORKSPACE  bootstrap.sh  podfile_deps.py
Examples/React/App/: AppDelegate.mm  main.jsbundle
Examples/React/Patches/Flipper-Folly/follyflipper/memory/detail/: MallocImpl.cpp
Examples/React/Patches/Flipper-Folly/follyflipper/portability/: SysUio.cpp
Examples/React/Podspecs/: Flipper-Boost-iOSX.podspec  Flipper-DoubleConversion.podspec.json  Flipper-Folly.podspec.json  Flipper-Glog.podspec  Flipper-PeerTalk.podspec  Flipper-RSocket.podspec.json  Flipper.podspec.json  FlipperKit.podspec.json  MMKV.podspec  OpenSSL-Universal.podspec  RCT-Folly.podspec  RNCAsyncStorage.podspec  RNCMaskedView.podspec  RNDateTimePicker.podspec  RNGestureHandler.podspec  RNReanimated.podspec  RNSVG.podspec  RNScreens.podspec  RNVectorIcons.podspec  React-Core.podspec  Yoga.podspec  react-native-safe-area-context.podspec  react-native-view-shot.podspec  react-native-webview.podspec  rn-fetch-blob.podspec
IntegrationTests/GoldMaster/: Adjust.podspec.json.goldmaster  BUILD  Bolts.podspec.json.goldmaster  Braintree.podspec.json.goldmaster  Branch.podspec.json.goldmaster  Calabash.podspec.json.goldmaster  CardIO.podspec.json.goldmaster  CocoaLumberjack.podspec.json.goldmaster  ColorCube.podspec.json.goldmaster  EarlGrey.podspec.json.goldmaster  FBAllocationTracker.0.1.3.podspec.json.goldmaster  FBSDKCoreKit.7.1.0.podspec.json.goldmaster  FBSDKCoreKit.podspec.json.goldmaster  FBSDKLoginKit.7.1.0.podspec.json.goldmaster  FBSDKLoginKit.podspec.json.goldmaster  FBSDKMessengerShareKit.podspec.json.goldmaster  FBSDKShareKit.podspec.json.goldmaster  FLAnimatedImage.podspec.json.goldmaster  FLEX.podspec.json.goldmaster  FMDB.podspec.json.goldmaster  FolioReaderKit.podspec.json.goldmaster  Folly.podspec.json.goldmaster  GoogleAppIndexing.podspec.json.goldmaster  GoogleAppUtilities.podspec.json.goldmaster  GoogleAuthUtilities.podspec.json.goldmaster  GoogleNetworkingUtilities.podspec.json.goldmaster  (+38 more)
tools/: gen_top_pods.py
(+5 files in other folders)
